hphp/hack/test/typecheck/classname/private_access.php.exp
File "private_access.php", line 7, characters 9-9:
Private methods cannot be accessed dynamically. Did you mean to use 'self::'? (Typing[4112])
  File "private_access.php", line 4, characters 27-27:
  This method is private
