hphp/hack/test/typecheck/classname/private_access.php
<?hh

class Foo {
  private static function f(): void {}

  public static function g(classname<Foo> $x): void {
    $x::f();
  }
}
